@@ -87,6 +87,7 @@ export(perSampleDominantFeatures)
 export(perSampleDominantTaxa)
 export(performDMNgroupCV)
 export(plotNMDS)
+export(rarefyAssay)
 export(readQZA)
 export(relAbundanceCounts)
 export(relabundance)
@@ -197,6 +198,7 @@ exportMethods(mergeSamples)
 exportMethods(perSampleDominantFeatures)
 exportMethods(perSampleDominantTaxa)
 exportMethods(performDMNgroupCV)
+exportMethods(rarefyAssay)
 exportMethods(relAbundanceCounts)
 exportMethods(relabundance)
 exportMethods(right_join)
