@@ -1,12 +1,11 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/subsampleCounts.R
-\name{subsampleCounts}
-\alias{subsampleCounts}
-\alias{rarifyCounts}
-\alias{subsampleCounts,SummarizedExperiment-method}
+% Please edit documentation in R/rarefyAssay.R
+\name{rarefyAssay}
+\alias{rarefyAssay}
+\alias{rarefyAssay,SummarizedExperiment-method}
 \title{Subsample Counts}
 \usage{
-subsampleCounts(
+rarefyAssay(
   x,
   assay.type = assay_name,
   assay_name = "counts",
@@ -17,7 +16,7 @@ subsampleCounts(
   ...
 )
 
-\S4method{subsampleCounts}{SummarizedExperiment}(
+\S4method{rarefyAssay}{SummarizedExperiment}(
   x,
   assay.type = assay_name,
   assay_name = "counts",
@@ -60,18 +59,18 @@ message about the random number used is printed.}
 \item{...}{additional arguments not used}
 }
 \value{
-\code{subsampleCounts} return \code{x} with subsampled data.
+\code{rarefyAssay} return \code{x} with subsampled data.
 }
 \description{
-\code{subsampleCounts} will randomly subsample counts in
+\code{rarefyAssay} will randomly subsample counts in
 \code{SummarizedExperiment} and return the a modified object in which each
 sample has same number of total observations/counts/reads.
 }
 \details{
 Although the subsampling approach is highly debated in microbiome research,
-we include the \code{subsampleCounts} function because there may be some
+we include the \code{rarefyAssay} function because there may be some
 instances where it can be useful.
-Note that the output of \code{subsampleCounts} is not the equivalent as the
+Note that the output of \code{rarefyAssay} is not the equivalent as the
 input and any result have to be verified with the original dataset.
 To maintain the reproducibility, please define the seed using set.seed()
 before implement this function.
@@ -83,7 +82,7 @@ before implement this function.
 data(GlobalPatterns)
 tse <- GlobalPatterns
 set.seed(123)
-tse.subsampled <- subsampleCounts(tse, 
+tse.subsampled <- rarefyAssay(tse, 
                                   min_size = 60000, 
                                   name = "subsampled" 
                                   )
